Fixed repetitive side bar items

--- a/_layouts/page_v2.html
+++ b/_layouts/page_v2.html
@@ -102,7 +102,7 @@
 						            				{% if isPage == 1 %}
 						            					<span class="menu-collapsed pb-nav-item pb-first-item" style="background-color:#cccccc">{{thisSubItem.title}}</span>
 						            				{% else %}
-														<span class="menu-collapsed pb-nav-item pb-first-item">{{thisSubItem.title}}{{isPage}}</span>
+														<span class="menu-collapsed pb-nav-item pb-first-item">{{thisSubItem.title}}</span>
 													{% endif %}
 				                				</a>
 				            				{% elsif subsectionIdx == lastIdx %}
