--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -23,10 +23,15 @@
 	}
 	
 	.picture {
-    	height:100%;
-		width: 100%;
+    	
 		background-image: url('/assets/images/icons/icnGetStarted_wh-sh.png');
 		background-repeat:no-repeat;
+		background-size: contain;
+		width: 10%;
+		height: 20%;
+		padding-top: 66.64%;
+		border:1px solid red;
+		
 	}
 
 	.picture:hover {
