--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,14 @@
     <script src="{{site.baseurl}}/assets/js/easing.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/main.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/pbjs_home.js"></script>
+
+<!-- OneTrust Cookies Consent Notice start -->
+<script src="https://optanon.blob.core.windows.net/consent/e5b25ddc-fefa-4f0d-b58d-cdcc90334ee1-test.js" type="text/javascript" charset="UTF-8"></script>
+<script type="text/javascript">
+function OptanonWrapper() { }
+</script>
+<!-- OneTrust Cookies Consent Notice end -->
+
 </head>
 
 <body>
