--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,22 @@
 {% include head.html %}
-{% include main_nav.html %}
 
+{% include nav.html %}
+
+<!--
 <div class="bs-docs-header" id="content">
     <div class="container">
         <h1>Prebid.org Blog</h1>
         <p>A collection of helpful tips for implementing header bidding with.</p>
     </div>
 </div>
+-->
+
+
 
 <div class="container bs-docs-container">
     <div class="row">
-        <div class="col-md-9" role="main">
-            <div class="bs-docs-section">
+        <div class="col-md-9 pb-blog" role="main">
+            <div class="bs-docs-section ">
                 <h1>{{page.title}}</h1> 
                 {{content}}
 
