--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
   background-color: #FFFFFF;
   font-family: 'Lato', sans-serif;
@@ -541,107 +539,6 @@ button.list-group-item:focus {
   perspective: 1000px;
 }
 
-.carousel-item.active,
-.carousel-item-next,
-.carousel-item-prev {
-  display: block;
-  transition: -webkit-transform 0.6s ease;
-  transition: transform 0.6s ease;
-  transition: transform 0.6s ease, -webkit-transform 0.6s ease;
-}
-
-@media screen and (prefers-reduced-motion: reduce) {
-  .carousel-item.active,
-  .carousel-item-next,
-  .carousel-item-prev {
-    transition: none;
-  }
-}
-
-.carousel-item-next,
-.carousel-item-prev {
-  position: absolute;
-  top: 0;
-}
-
-.carousel-item-next.carousel-item-left,
-.carousel-item-prev.carousel-item-right {
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-}
-
-@supports ((-webkit-transform-style: preserve-3d) or (transform-style: preserve-3d)) {
-  .carousel-item-next.carousel-item-left,
-  .carousel-item-prev.carousel-item-right {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-}
-
-.carousel-item-next,
-.active.carousel-item-right {
-  -webkit-transform: translateX(100%);
-  transform: translateX(100%);
-}
-
-@supports ((-webkit-transform-style: preserve-3d) or (transform-style: preserve-3d)) {
-  .carousel-item-next,
-  .active.carousel-item-right {
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
-  }
-}
-
-.carousel-item-prev,
-.active.carousel-item-left {
-  -webkit-transform: translateX(-100%);
-  transform: translateX(-100%);
-}
-
-@supports ((-webkit-transform-style: preserve-3d) or (transform-style: preserve-3d)) {
-  .carousel-item-prev,
-  .active.carousel-item-left {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-  }
-}
-
-.carousel-fade .carousel-item {
-  opacity: 0;
-  transition-duration: .6s;
-  transition-property: opacity;
-}
-
-.carousel-fade .carousel-item.active,
-.carousel-fade .carousel-item-next.carousel-item-left,
-.carousel-fade .carousel-item-prev.carousel-item-right {
-  opacity: 1;
-}
-
-.carousel-fade .active.carousel-item-left,
-.carousel-fade .active.carousel-item-right {
-  opacity: 0;
-}
-
-.carousel-fade .carousel-item-next,
-.carousel-fade .carousel-item-prev,
-.carousel-fade .carousel-item.active,
-.carousel-fade .active.carousel-item-left,
-.carousel-fade .active.carousel-item-prev {
-  -webkit-transform: translateX(0);
-  transform: translateX(0);
-}
-
-@supports ((-webkit-transform-style: preserve-3d) or (transform-style: preserve-3d)) {
-  .carousel-fade .carousel-item-next,
-  .carousel-fade .carousel-item-prev,
-  .carousel-fade .carousel-item.active,
-  .carousel-fade .active.carousel-item-left,
-  .carousel-fade .active.carousel-item-prev {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-}
 
 .carousel-control-prev,
 .carousel-control-next {
@@ -670,96 +567,13 @@ button.list-group-item:focus {
 }
 
 .carousel-control-prev {
-  left: 0;
+  left: -15%;
 }
 
 .carousel-control-next {
-  right: 0;
+  right: -15%;
 }
 
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: transparent no-repeat center center;
-  background-size: 100% 100%;
-  padding:-50;
-  margin: 0;
-}
-
-.carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
-}
-
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-}
-
-.carousel-indicators {
-  position: absolute;
-  right: 0;
-  bottom: 10px;
-  left: 0;
-  z-index: 15;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-  justify-content: center;
-  padding-left: 0;
-  margin-right: 15%;
-  margin-left: 15%;
-  list-style: none;
-}
-
-.carousel-indicators li {
-  position: relative;
-  -ms-flex: 0 1 auto;
-  flex: 0 1 auto;
-  width: 30px;
-  height: 3px;
-  margin-right: 3px;
-  margin-left: 3px;
-  text-indent: -999px;
-  cursor: pointer;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-.carousel-indicators li::before {
-  position: absolute;
-  top: -10px;
-  left: 0;
-  display: inline-block;
-  width: 100%;
-  height: 10px;
-  content: "";
-}
-
-.carousel-indicators li::after {
-  position: absolute;
-  bottom: -10px;
-  left: 0;
-  display: inline-block;
-  width: 100%;
-  height: 10px;
-  content: "";
-}
-
-.carousel-indicators .active {
-  background-color: #fff;
-}
-
-.carousel-caption {
-  position: absolute;
-  right: 15%;
-  bottom: 20px;
-  left: 15%;
-  z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: #fff;
-  text-align: center;
-}
 
 
 /********************************/
@@ -890,6 +704,27 @@ button.list-group-item:focus {
     width: 100%;
 }
 
+/****************************
+		Blog
+***************************/
+
+.pb-blog { 
+	margin-left:50px;
+	font-family: 'Verdana', sans-serif;
+	font-size: 34px;
+	font-weight: 400;
+}
+
+.pb-blog h1 { 
+	
+	display: table;
+	padding: 3px 8px;
+	font-family: 'Verdana', sans-serif;
+	color: #ffffff;
+	font-size: 34px;
+	font-weight: 400;
+}
+
 
 /********************************
 	Content Pages
@@ -905,12 +740,14 @@ button.list-group-item:focus {
 	margin:0;
 }
 
+
+
 .pb-content {
 	padding: 20px; 
 	margin-left: 20px;
 }
 
-.pb-content p { 
+.pb-content, .pb-blog p { 
 	
 	font-family: 'Lato', sans-serif;
 	color: #000000;
@@ -929,7 +766,7 @@ button.list-group-item:focus {
 	font-weight: 400;
 }
 
-.pb-content h2 { 
+.pb-content, .pb-blog h2 { 
 	
 	font-family: 'Verdana', sans-serif;
 	color: #000000;
@@ -937,7 +774,7 @@ button.list-group-item:focus {
 	font-weight: 400;
 }
 
-.pb-content h3 { 
+.pb-content, .pb-blog h3 { 
 	
 	font-family: 'Verdana', sans-serif;
 	color: #333333;
@@ -945,7 +782,7 @@ button.list-group-item:focus {
 	font-weight: 300;
 }
 
-.pb-content h4 { 
+.pb-content, .pb-blog h4 { 
 	
 	font-family: 'Verdana', sans-serif;
 	color: #333333;
@@ -954,7 +791,7 @@ button.list-group-item:focus {
 }
 
 
-.pb-content h5 { 
+.pb-content, .pb-blog h5 { 
 	
 	font-family: 'Verdana', sans-serif;
 	color: #333333;
@@ -963,12 +800,12 @@ button.list-group-item:focus {
 }
 
 
-.pb-content ul, ol, li { 
+.pb-content, .pb-blog ul, ol, li { 
 	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 }
 
-.pb-img {
+.pb-img, ,pb-blog {
   -webkit-box-shadow: 2px 2px 8px -2px rgba(0,0,0,0.35);
   -moz-box-shadow: 2px 2px 8px -2px rgba(0,0,0,0.35);
   box-shadow: 2px 2px 8px -2px rgba(0,0,0,0.35);
