--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -79,6 +79,7 @@
 									<div class="pb_benefits_content">
 										<h3>Get Started Quickly</h3>
 										<span>Follow simple step-by-step instructions to download, integrate, and configure header bidding with Prebid.</span>
+										
 									</div>
 								
 								</div>
@@ -131,11 +132,11 @@
 						    </div>
 						  </div>
 						  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						    <span class="carousel-control-prev-icon glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 						    <span class="sr-only">Previous</span>
 						  </a>
 						  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						    <span class="carousel-control-next-icon glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 						    <span class="sr-only">Next</span>
 						  </a>
 						</div>
