--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,9 @@
         <title>{{page.title}} for Header Bidding</title>
     {% endif %}
     
-    <link href="{{site.baseurl}}/assets/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="{{site.baseurl}}/assets/css/bootstrap.min.css" rel="stylesheet">-->
+    <!-- Latest compiled and minified Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="{{site.baseurl}}/assets/css/docs.min.css" rel="stylesheet">
     <link href="{{site.baseurl}}/assets/css/style.css" rel="stylesheet">
     
