Added hover affect

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,12 +18,46 @@
 			</div>
 			
 			<div class="row">
-				<div class="header-links">
-					
-					<div class="header-links-item"><a href="/developers.html" class="pb_dev_link"><img src="/assets/images/svg/icn_developers.svg"></a><p>Developers</p></div>
-					<div class="header-links-item"><a href="/prebid/prebidjs.html" class="pb_start_link"><img src="/assets/images/svg/icn_getstarted.svg" class="large"></a><p>Get Started!</p></div>
-					<div class="header-links-item"><a href="/adops/before-you-start.html" class="pb_adops_link"><img src="/assets/images/svg/icn_adops.svg"></a><p>Ad Ops</p></div>
+				<div class="pb-home-links">
+			<div class="pb-home-links-outer-panel">
+				<div class="hovereffect">
+					<img src="/assets/images/svg/icn_developers.svg" alt="Developers!">
+					<span class="pb-panel-title">Developers</span>
+					<div class="overlay">
+						<p>
+							<a href="/developers.html">Developers, dive right in and start coding!</a>
+						</p>
+	            	</div>
 				</div>
+			</div>
+			
+			<div class="pb-home-links-panel">
+				<div class="hovereffect">
+					<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">
+					<span class="pb-panel-title">Get Started</span>
+					<div class="overlay">
+						<p>
+							<a href="/prebid/prebidjs.html">Let's Get Started!</a>
+						</p>
+		            </div>
+				</div>
+			</div>
+			
+			<div class="pb-home-links-outer-panel">
+				<div class="hovereffect">
+					<img src="/assets/images/svg/icn_adops.svg" alt="Ad Ops!">
+					<span class="pb-panel-title">Ad Ops</span>
+					<div class="overlay">
+						<p>
+							<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
+						</p>
+		            </div>
+				</div>
+			</div>
+			
+		</div>
+
+
 			</div>
 			
 			
