--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,48 +346,134 @@ button.list-group-item:focus {
 
 .pb_homewrapper_content h2 { 
 	color: #FFFFFF;
-	font-size:39px;
+	font-size:34px;
 	font-family: 'Roboto', sans-serif;
-	width: 50%;
+	width: 66%;
 	margin-right: auto;
 	margin-left: auto;
 }
 
-.header-links { 
+
+/*************Hover Effect***************/
+
+.pb-home-links { 
+	margin-left:auto;
+	margin-right: auto;
 	width: 75%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 40px;
-	text-align:center;
-	}
-
-
-.header-links-item {
-	float: left; 
-	width: 33%;
-	text-align:center;
-}
-
-.header-links-item img { 
-	width: 55%;
-	height: 55%;
-	margin-left:auto;
-	margin-right:auto
-}
-
-.header-links-item img.large { 
-	width: 60%;
-	height: 60%;
-	margin-left:auto;
-	margin-right:auto;
-	margin-top: -50px;
-}
-
-.header-links-item p { 
+	height: 240px;
 	font-family: 'Verdana', sans-serif;
+}
+
+.pb-home-links-panel { 
+	float:left;
+	margin-left:auto;
+	margin-right: auto;
+	width: 33%;
+	height: 380px;
+}
+
+.pb-home-links-outer-panel { 
+	float:left;
+	margin-top:100px;
+	margin-left:auto;
+	margin-right: auto;
+	width: 33%;
+	height: 350px;
+}
+
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+}
+
+.hovereffect .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  padding: 50px 20px;
+}
+
+.hovereffect img.pb-large-img {
+  display: block;
+  position: relative;
+  max-width: none;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:-20px;
+  width: calc(60% + 20px);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px,0,0);
+  transform: translate3d(-10px,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+
+.hovereffect img {
+  display: block;
+  position: relative;
+  max-width: none;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:-20px;
+  width: calc(50% + 20px);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px,0,0);
+  transform: translate3d(-10px,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.hovereffect:hover img {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}	
+
+.hovereffect a, .hovereffect p {
+  color: #000;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(100%,0,0);
+  transform: translate3d(100%,0,0);
+}
+
+.hovereffect:hover a, .hovereffect:hover p {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.hovereffect p { 
+	margin-top: 30px;
+	background-color: orange;
+}	
+
+.pb-home-links-panel p { 
+	margin-top:60px;
+}
+
+.pb-home-links span { 
+	display: inline-block;
 	font-size:35px;
 	color: #FFFFFF;
+	margin-top:-40px;
 }
+		
 
 /*===========Benefits===================*/
 
@@ -758,7 +844,7 @@ button.list-group-item:focus {
 	
 	font-family: 'Lato', sans-serif;
 	color: #000000;
-	font-size: 20px;
+	font-size: 16px;
 	font-weight: 100;
 }
 
